zybo_petalinux_video_hls.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xaxivdma_example_intr_1.build.log
16:33:25 **** Build of configuration Debug for project standalone_bsp_0_xaxivdma_example_intr_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/xaxivdma_example_intr.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxivdma_example_intr.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxivdma_example_intr.d" -MT"src/xaxivdma_example_intr.o" -o "src/xaxivdma_example_intr.o" "../src/xaxivdma_example_intr.c"
../src/xaxivdma_example_intr.c:118:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^
../src/xaxivdma_example_intr.c: In function ‘main’:
../src/xaxivdma_example_intr.c:105:23: error: ‘XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID’ undeclared (first use in this function)
 #define READ_INTR_ID  XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID
                       ^
../src/xaxivdma_example_intr.c:414:37: note: in expansion of macro ‘READ_INTR_ID’
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                     ^
../src/xaxivdma_example_intr.c:105:23: note: each undeclared identifier is reported only once for each function it appears in
 #define READ_INTR_ID  XPAR_FABRIC_AXIVDMA_0_MM2S_INTROUT_VEC_ID
                       ^
../src/xaxivdma_example_intr.c:414:37: note: in expansion of macro ‘READ_INTR_ID’
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                     ^
../src/xaxivdma_example_intr.c:104:24: error: ‘XPAR_FABRIC_AXIVDMA_0_S2MM_INTROUT_VEC_ID’ undeclared (first use in this function)
 #define WRITE_INTR_ID  XPAR_FABRIC_AXIVDMA_0_S2MM_INTROUT_VEC_ID
                        ^
../src/xaxivdma_example_intr.c:414:51: note: in expansion of macro ‘WRITE_INTR_ID’
  Status = SetupIntrSystem(&AxiVdma, READ_INTR_ID, WRITE_INTR_ID);
                                                   ^
src/subdir.mk:21: recipe for target 'src/xaxivdma_example_intr.o' failed
make: *** [src/xaxivdma_example_intr.o] Error 1

16:33:25 Build Finished (took 155ms)

